fdo#84228: Set rectangle props after setting shadow props

It doesn't work the other way round, the preview then fails to be
updated, the old shadow still sticks around. I don't know why. Those
X different SfxItemSet pools just make my head spin :(

Change-Id: I436a46f95299cf32f4bb43437cc5c23a655dbe9d